export as R scripts
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/experiment-2/analysis/stats/articulation.Rmd
+++ b/experiment-2/analysis/stats/articulation.Rmd
@@ -541,7 +541,6 @@ ggline(kot_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = 
   scale_x_continuous(breaks = seq(1,8,1))
 ```
 
-
 # Sequence plot
 ## Articulation{#sequence_art}
 ```{r seq-art, fig.width = 9, fig.height = 3, echo = FALSE}
@@ -561,4 +560,8 @@ kor_dyn_seq <- dt_kor_dyn[, .(N = .N, Mean = mean(KOR), SD = sd(KOR)), by = .(Su
 ggline(kor_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "KOR", title = "KOT: Dynamics")+
   theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,71,1)) 
+```
+
+```{r export, include = FALSE}
+knitr::purl("articulation.Rmd")
 ```
