--- a/experiment-2/analysis/stats/dynamics.Rmd
+++ b/experiment-2/analysis/stats/dynamics.Rmd
@@ -586,3 +586,7 @@ ggline(vel_diff_art_seq, x = "Interval", y = "Mean", add = "mean_se", position =
   theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,71,1))
 ```
+
+```{r export, include = FALSE}
+knitr::purl("dynamics.Rmd")
+```
