--- a/experiment-2/analysis/stats/ioi.Rmd
+++ b/experiment-2/analysis/stats/ioi.Rmd
@@ -431,3 +431,7 @@ ggline(ioi_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = posi
   theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
     scale_x_continuous(breaks = seq(1,71,1))
 ```
+
+```{r export, include = FALSE}
+knitr::purl("ioi.Rmd")
+```
